[gd_scene load_steps=32 format=3 uid="uid://cjm5p2a8x7b1q"]

[ext_resource type="Script" uid="uid://dsy06xm0r81xn" path="res://scripts/missions/mission_2/Mission2.gd" id="1"]
[ext_resource type="Script" uid="uid://f3rodujd6g18" path="res://scripts/utils/graphs/visuals/GraphDisplay.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://b7qv5xk8p3nt1" path="res://scenes/views/NodeView.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://c5h8lam2n4p6q" path="res://scenes/views/EdgeView.tscn" id="4"]
[ext_resource type="Script" uid="uid://fgm4ahof83xw" path="res://scripts/utils/graphs/editor/GraphBuilder.gd" id="5"]
[ext_resource type="Script" uid="uid://5x1d3j1l85ra" path="res://scripts/utils/graphs/editor/GraphNodeData.gd" id="6"]
[ext_resource type="Script" uid="uid://2whcwiw6slu" path="res://scripts/utils/graphs/editor/GraphConnectionData.gd" id="7"]
[ext_resource type="Script" uid="uid://dkmqha3s6mcs" path="res://scripts/missions/mission_1/NetworkNodeMeta.gd" id="8"]

[sub_resource type="Resource" id="NetworkNodeMeta_control"]
script = ExtResource("8")
hidden_message = "Centro de comando - punto de partida seguro."
device_type = "Control Center"
display_name = "Control Center"

[sub_resource type="Resource" id="GraphNodeData_control"]
script = ExtResource("6")
node_key = "Control Center"
vertex_meta = SubResource("NetworkNodeMeta_control")

[sub_resource type="Resource" id="NetworkNodeMeta_infected"]
script = ExtResource("8")
hidden_message = "Servidor infectado - objetivo de la misión."
is_root = true
threat_level = 3
device_type = "Infected Server"
display_name = "Infected Server"

[sub_resource type="Resource" id="GraphNodeData_infected"]
script = ExtResource("6")
node_key = "Infected Server"
vertex_meta = SubResource("NetworkNodeMeta_infected")

[sub_resource type="Resource" id="NetworkNodeMeta_router_a"]
script = ExtResource("8")
threat_level = 1
device_type = "Router"
display_name = "Router A"

[sub_resource type="Resource" id="GraphNodeData_router_a"]
script = ExtResource("6")
node_key = "Router A"
vertex_meta = SubResource("NetworkNodeMeta_router_a")

[sub_resource type="Resource" id="NetworkNodeMeta_router_b"]
script = ExtResource("8")
threat_level = 2
device_type = "Router"
display_name = "Router B"

[sub_resource type="Resource" id="GraphNodeData_router_b"]
script = ExtResource("6")
node_key = "Router B"
vertex_meta = SubResource("NetworkNodeMeta_router_b")

[sub_resource type="Resource" id="NetworkNodeMeta_switch"]
script = ExtResource("8")
threat_level = 1
device_type = "Switch"
display_name = "Switch Central"

[sub_resource type="Resource" id="GraphNodeData_switch"]
script = ExtResource("6")
node_key = "Switch Central"
vertex_meta = SubResource("NetworkNodeMeta_switch")

[sub_resource type="Resource" id="NetworkNodeMeta_firewall"]
script = ExtResource("8")
threat_level = 1
device_type = "Firewall"
display_name = "Firewall"

[sub_resource type="Resource" id="GraphNodeData_firewall"]
script = ExtResource("6")
node_key = "Firewall"
vertex_meta = SubResource("NetworkNodeMeta_firewall")

[sub_resource type="Resource" id="NetworkNodeMeta_proxy"]
script = ExtResource("8")
threat_level = 2
device_type = "Proxy"
display_name = "Proxy Server"

[sub_resource type="Resource" id="GraphNodeData_proxy"]
script = ExtResource("6")
node_key = "Proxy Server"
vertex_meta = SubResource("NetworkNodeMeta_proxy")

[sub_resource type="Resource" id="GraphConnectionData_1"]
script = ExtResource("7")
from_node = "Control Center"
to_node = "Router A"

[sub_resource type="Resource" id="GraphConnectionData_2"]
script = ExtResource("7")
from_node = "Control Center"
to_node = "Firewall"
weight = 2.0

[sub_resource type="Resource" id="GraphConnectionData_3"]
script = ExtResource("7")
from_node = "Router A"
to_node = "Switch Central"
weight = 1.5

[sub_resource type="Resource" id="GraphConnectionData_4"]
script = ExtResource("7")
from_node = "Router A"
to_node = "Router B"
weight = 4.0

[sub_resource type="Resource" id="GraphConnectionData_5"]
script = ExtResource("7")
from_node = "Firewall"
to_node = "Switch Central"
weight = 3.0

[sub_resource type="Resource" id="GraphConnectionData_6"]
script = ExtResource("7")
from_node = "Firewall"
to_node = "Proxy Server"
weight = 2.5

[sub_resource type="Resource" id="GraphConnectionData_7"]
script = ExtResource("7")
from_node = "Switch Central"
to_node = "Infected Server"

[sub_resource type="Resource" id="GraphConnectionData_8"]
script = ExtResource("7")
from_node = "Router B"
to_node = "Infected Server"
weight = 5.0

[sub_resource type="Resource" id="GraphConnectionData_9"]
script = ExtResource("7")
from_node = "Proxy Server"
to_node = "Infected Server"
weight = 6.0

[node name="Mission_2" type="Node2D"]
script = ExtResource("1")

[node name="GraphDisplay" type="Node2D" parent="."]
position = Vector2(495, 379)
script = ExtResource("2")
node_scene = ExtResource("3")
edge_scene = ExtResource("4")
layout_type = "force_directed"
edge_label_mode = "weight"
show_edge_direction = true

[node name="GraphBuilder" type="Node" parent="."]
script = ExtResource("5")
nodes = Array[ExtResource("6")]([SubResource("GraphNodeData_control"), SubResource("GraphNodeData_infected"), SubResource("GraphNodeData_router_a"), SubResource("GraphNodeData_router_b"), SubResource("GraphNodeData_switch"), SubResource("GraphNodeData_firewall"), SubResource("GraphNodeData_proxy")])
connections = Array[ExtResource("7")]([SubResource("GraphConnectionData_1"), SubResource("GraphConnectionData_2"), SubResource("GraphConnectionData_3"), SubResource("GraphConnectionData_4"), SubResource("GraphConnectionData_5"), SubResource("GraphConnectionData_6"), SubResource("GraphConnectionData_7"), SubResource("GraphConnectionData_8"), SubResource("GraphConnectionData_9")])

[node name="HUD" type="CanvasLayer" parent="."]

[node name="StatusBar" type="PanelContainer" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 38.0
grow_horizontal = 2

[node name="StatusMargin" type="MarginContainer" parent="HUD/StatusBar"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 8
metadata/_edit_lock_ = true

[node name="StatusHBox" type="HBoxContainer" parent="HUD/StatusBar/StatusMargin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MissionTitle" type="Label" parent="HUD/StatusBar/StatusMargin/StatusHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Misión 2: Shortest Path"

[node name="StatusLabel" type="Label" parent="HUD/StatusBar/StatusMargin/StatusHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.7, 0.8, 0.95, 1)
theme_override_font_sizes/font_size = 14
text = "Estado: Listo"
horizontal_alignment = 1

[node name="SidePanel" type="PanelContainer" parent="HUD"]
custom_minimum_size = Vector2(340, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -360.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 2

[node name="PanelMargin" type="MarginContainer" parent="HUD/SidePanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="HUD/SidePanel/PanelMargin"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/SidePanel/PanelMargin/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 18

[node name="ObjectiveSection" type="VBoxContainer" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ObjectiveHeader" type="Label" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/ObjectiveSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "OBJETIVO"

[node name="ResultLabel" type="RichTextLabel" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/ObjectiveSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[color=#aabbdd]Encuentra la ruta más segura desde el Centro de Control hasta el Servidor Infectado usando Dijkstra.[/color]"
fit_content = true
scroll_active = false

[node name="Divider1" type="HSeparator" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlSection" type="VBoxContainer" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ControlHeader" type="Label" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/ControlSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.95, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "CONTROLES"

[node name="ControlButtons" type="VBoxContainer" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/ControlSection"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="CalculateButton" type="Button" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/ControlSection/ControlButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Calcular Ruta"

[node name="StepButton" type="Button" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/ControlSection/ControlButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Paso a Paso"

[node name="Divider2" type="HSeparator" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MetricsSection" type="VBoxContainer" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MetricsHeader" type="Label" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/MetricsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 14
text = "MÉTRICAS"

[node name="DistanceLabel" type="Label" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/MetricsSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Distancia: 0.0"

[node name="Divider3" type="HSeparator" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusSection" type="VBoxContainer" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatusHeader" type="Label" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/StatusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.75, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "ESTADO"

[node name="StatusGrid" type="VBoxContainer" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/StatusSection"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ThreatLabel" type="Label" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/StatusSection/StatusGrid"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Amenaza: 0 (estable)"

[node name="TurnsLabel" type="Label" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/StatusSection/StatusGrid"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Turnos: --"

[node name="Divider4" type="HSeparator" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ResourceSection" type="VBoxContainer" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ResourceHeader" type="Label" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/ResourceSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 14
text = "RECURSOS"

[node name="ResourcesLabel" type="Label" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/ResourceSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Escaneos: 0 | Firewalls: 0"

[node name="ResourceButtons" type="HBoxContainer" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/ResourceSection"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ScanButton" type="Button" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/ResourceSection/ResourceButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Escaneo"

[node name="FirewallButton" type="Button" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer/ResourceSection/ResourceButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Firewall"

[node name="Spacer" type="Control" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ContinueButton" type="Button" parent="HUD/SidePanel/PanelMargin/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Continuar"
